fix(header): Fix .header-image background size for retina monitors.
Fix .header-image background size for retina monitors. Use background-size property to avoid image being too large.

--- a/src/styles/layout/header/styles.less
+++ b/src/styles/layout/header/styles.less
@@ -86,6 +86,7 @@
     .header-image {
       background: @purple;
       background-image: url('../../../img/layout/header/header-image-default.png');
+      background-size: 40px 40px;
       border-radius: 100px;
       display: block;
       height: 40px;
